feat: Codebase cleanup, added support for preview features in gradle build